@@ -1,6 +1,12 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 
+  18 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge,
+  ebuild.sh : Fixed USE bug (config.reset() threw away our cumulative USE),
+  streamlined turbo dep calculations by moving edb cache entry creation to
+  ebuild.sh.  Started coding new dblink.merge() method that should be much
+  cleaner, faster and merge symlinks safely.
+ 
   17 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py : Added
   cumulative USE variable support.  The final USE var is calculated
   cumulatively starting with make.profile, then make.conf, and then the
